compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__todo_in_a_constant_produces_an_error.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: pub const wibble = todo
---
----- SOURCE CODE
pub const wibble = todo

----- ERROR
error: Constant todo found
  ┌─ /src/one/two.gleam:1:20
  │
1 │ pub const wibble = todo
  │                    ^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before running your
program.
