compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__tuple_arity.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case #(1, 2) { #(1, _, _, _) -> 1 }"
---
----- SOURCE CODE
case #(1, 2) { #(1, _, _, _) -> 1 }

----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:1:16
  │
1 │ case #(1, 2) { #(1, _, _, _) -> 1 }
  │                ^^^^^^^^^^^^^ Expected 2 arguments, got 4
